spacing fix

--- a/css/case1.css
+++ b/css/case1.css
@@ -46,6 +46,7 @@ div.row.table{
 /* case logo */
 img.mx-auto.d-block.dockit-logo{
   margin-top:60px;
+  margin-bottom:60px;
   width:40%;
 }
 
